# baez

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: architecture.md  cross-cutting.md  design-intent.md  knowledge-graph.md  memory-index.md  module-api.md  module-auth.md  module-convert.md  module-error.md  module-model.md  module-storage.md  module-summary.md  module-sync.md  module-util.md  project-overview.md  style-conventions.md  suggested_commands.md  task-completion.md
docs/superpowers/plans/: 2026-03-11-vault-enhancements.md  2026-03-14-knowledge-graph-extraction.md  2026-03-15-summarization-cache.md
docs/superpowers/specs/: 2026-03-11-vault-enhancements-design.md  2026-03-14-knowledge-graph-extraction-design.md  2026-03-15-summarization-cache-design.md  2026-05-11-granola-token-refresh-design.md
src/: api.rs  auth.rs  cli.rs  convert.rs  error.rs  lib.rs  main.rs  model.rs  storage.rs  summary.rs  sync.rs  util.rs
src/snapshots/: baez__convert__snapshot_tests__markdown_output_snapshot.snap
tests/: api_integration.rs  auth_refresh_integration.rs  workflow_integration.rs
